[package]
name = "rustcore"
version = "0.1.0"
edition = "2024"

[dependencies]
rand = "0.9.1"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.21"
tungstenite = "0.21"
futures = "0.3"
futures-util = "0.3.31"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

pixels = "0.12"
winit = "0.28"
log = "0.4"
env_logger = "0.10"

bincode = "1.3"

uuid = { version = "1.3", features = ["v4"] }
warp = { version = "0.4", features = ["websocket"] }

